--- a/learn/知识归纳.md
+++ b/learn/知识归纳.md
@@ -243,3 +243,531 @@ var a = New(Array)
 console.log(a)
 ```
 
+
+
+### ES6
+
+**Babel**
+
+- Babel 默认只转换新的 JavaScript 句法（syntax），而不转换新的 API
+- 如果需要使用Promise，Proxy等API 需要通过polyfill core-js等其他方法兼容
+
+**const，let不会修改顶层对象的属性**
+
+```js
+var a = 1;
+// 如果在 Node 的 REPL 环境，可以写成 global.a
+// 或者采用通用方法，写成 this.a
+window.a // 1
+
+let b = 1;
+window.b // undefined
+```
+
+**箭头函数**
+
+```js
+// 由于箭头函数使得this从“动态”变成“静态”，下面两个场合不应该使用箭头函数。
+const cat = {
+  lives: 9,
+  jumps: () => {
+    this.lives--;
+  }
+}
+// 上面代码中，cat.jumps()方法是一个箭头函数，这是错误的。调用cat.jumps()时，如果是普通函数，该方法内部的this指向cat；如果写成上面那样的箭头函数，使得this指向全局对象，因此不会得到预期结果。这是因为对象不构成单独的作用域，导致jumps箭头函数定义时的作用域就是全局作用域。
+```
+
+**reduce**
+
+- 实现pipeline
+
+```js
+// 这里改成函数执行 把有返回值的函数当成一个变量在函数中传参调用
+funcs.reduce(function(pre,cur){
+ return cur(pre);
+}, val);
+
+var pipeline = (val, ...funcs) => funcs.reduce((pre, cur) => cur(pre), val); 
+
+var double = n => n * 2;
+var pow = n => n * n;
+var pow3 = n => n * n * n;
+
+var result = pipeline(2, double, pow, pow3); // 4096
+```
+
+- 对象数组去重
+
+```js
+// 通过对象key的唯一性来实现 对象数组去重
+test(array) {
+    let obj = {}
+    let result = []
+    result = array.reduce(function(item, next) {
+        // obj[next.id] ? '' : obj[next.id] = true && item.push(next);  // 写法一
+        // return item;
+        
+        if (!obj[next.id]) { // 写法二
+            obj[next.id] = true  // 如果不存在 就把下一个的标识符放入obj中 并设置true 如果下次还出现 则不push（做到了去重作用）
+            item.push(next)
+        }
+        return item;
+    }, []);// 初始值设为空数组
+    return result
+},
+
+var arr = [
+  { id: 1, name: 'a' },
+  { id: 1, name: 'a' },
+  { id: 2, name: 'b' },
+  { id: 3, name: 'c' },
+  { id: 3, name: 'g' },
+]
+console.log('1111', this.test(arr))
+
+
+
+// 小优化  抽离标识符（key）obj.name === obj[name]
+test2(array, name) {
+    let obj = {}
+    let result = []
+    result = array.reduce(function(item, next) {
+        if (!obj[next[name]]) {
+            obj[next[name]] = true 
+            item.push(next)
+        }
+        return item;
+    }, []);// 初始值设为空数组
+    return result
+},
+console.log('222', this.test(arr, 'name'))
+    
+```
+
+**rest参数与扩展运算符**
+
+扩展运算符（spread）是三个点（`...`）。它好比 rest 参数的逆运算，将一个数组转为用逗号分隔的参数序列
+
+```js
+// ES6 引入 rest 参数（形式为...变量名），用于获取函数的多余参数，这样就不需要使用arguments对象了。rest 参数搭配的变量是一个数组，该变量将多余的参数放入数组中。
+function add(...values) {// ...values 转换成 数组 [2, 5 ,3]
+  let sum = 0;
+
+  for (var val of values) {
+    sum += val;
+  }
+
+  return sum;
+}
+
+
+// 扩展运算符后面还可以放置表达式。
+const arr = [
+  ...(x > 0 ? ['a'] : []),
+  'b',
+];
+
+const obj = {
+    ...(x > 0 ? {a: 1} : {b: 2})
+}
+```
+
+
+
+**尽量不要用`for...in`循环，而用`Object.keys()`代替。**
+
+- For...in 会引入继承属性，
+- `for...in`循环：只遍历对象自身的和继承的可枚举的属性。
+- `Object.keys()`：返回对象自身的所有可枚举的属性的键名。
+
+**in关键字扩展**
+
+单独使用时，in操作符会在通过对象能够访问给定属性时返回true（对象实例或者原型中存在即可）
+
+object.hasOwnProperty只在属性存在于实例中时才返回 true，因此只要 in 操作符返回 true 而 hasOwnProperty()返回 false，就可以确定属性是原型中的属性
+
+**所以 for...in循环能遍历继承原型的属性（in关键字的作用）**
+
+
+
+### super关键字
+
+- `this`关键字总是指向函数所在的当前对象，ES6 又新增了另一个类似的关键字`super`，指向当前对象的原型对象。
+-  call，apply都是改变this指向 Object.setPrototypeOf是改变原型指向
+
+```js
+const proto = {
+  x: 'hello',
+  foo() {
+    console.log(this.x);
+  },
+};
+
+const obj = {
+  x: 'world',
+  foo() {
+    super.foo();
+  }
+}
+
+Object.setPrototypeOf(obj, proto);
+
+obj.foo() // "world"
+
+// 上面代码中，super.foo指向原型对象proto的foo方法，但是绑定的this却还是当前对象obj，因此输出的就是world。
+```
+
+### map
+
+各种类型的值（包括对象）都可以当作键。也就是说，Object 结构提供了“字符串—值”的对应，Map 结构提供了“值—值”的对应，
+
+
+
+### Proxy
+
+- Proxy 可以理解成，在目标对象之前架设一层“拦截”，外界对该对象的访问，都必须先通过这层拦截
+- `new Proxy()`表示生成一个`Proxy`实例，`target`参数表示所要拦截的目标对象，`handler`参数也是一个对象，用来定制拦截行为。
+
+### Promise
+
+- 其实就是一个存放异步操作的容器，为了解决回调地狱的问题
+- Promise.all,race,allSettled必须为Promise 实例作为参数
+- Promise.all 必须全部成功才能.then
+- Promise.race一个改变则整个状态改变（可做请求超时处理）
+- Promise.allSettled不关心成功与失败
+- Promise.prototype.finally()不管 Promise 对象最后状态如何，都会执行的操作
+
+```js
+promise
+.then(result => {···})
+.catch(error => {···})
+.finally(() => {···});
+```
+
+
+
+### [Event Loop](https://juejin.cn/post/6844903657264136200)
+
+举例：（银行办理业务）
+
+每办理完一个业务，柜员就会问当前的客户，是否还有其他需要办理的业务。***（检查还有没有微任务需要处理）***
+ 而客户明确告知说没有事情以后，柜员就去查看后边还有没有等着办理业务的人。***（结束本次宏任务、检查还有没有宏任务需要处理）***
+ 这个检查的过程是持续进行的，每完成一个任务都会进行一次，而这样的操作就被称为`Event Loop`。
+
+```js
+// +部分表示同步执行的代码 -表示异步
++setTimeout(_ => {
+-  console.log(4)
++})
+
++new Promise(resolve => {
++  resolve()
++  console.log(1)
++}).then(_ => {
+-  console.log(3)
++})
+
++console.log(2)
+```
+
+`setTimeout`就是作为宏任务来存在的，而`Promise.then`则是具有代表性的微任务，上述代码的执行顺序就是按照序号来输出的。
+
+- 完成一个宏任务+里边的N多微任务为一次事件循环。
+- 多个宏任务合在一起就可以认为说有一个任务队列（里边是当前银行中所有排号的客户）
+- 在当前的微任务没有执行完成时，是不会执行下一个宏任务的
+
+
+
+### Iterator(迭代器 | 遍历器)
+
+主要是数组（`Array`）和对象（`Object`），ES6 又添加了`Map`和`Set`。这样就有了四种数据集合，用户还可以组合使用它们，定义自己的数据结构，比如数组的成员是`Map`，`Map`的成员是对象。这样就需要一种统一的接口机制，来处理所有不同的数据结构
+
+**总结 ：Iterator首先创建一个指针对象 然后调用指针的next方法去遍历返回数据成员**
+
+**只要某个数据结构部署了 Iterator 接口，就可以对它使用扩展运算符将其转为数组或者for...of循环**
+
+
+
+### Generator
+
+```js
+function* helloWorldGenerator() {
+  yield 'hello';
+  yield 'world';
+  return 'ending';
+}
+
+var hw = helloWorldGenerator();
+
+hw.next()
+// { value: 'hello', done: false }
+
+hw.next()
+// { value: 'world', done: false }
+
+hw.next()
+// { value: 'ending', done: true }
+
+hw.next()
+// { value: undefined, done: true }
+
+// 总结一下，调用 Generator 函数，返回一个遍历器对象，代表 Generator 函数的内部指针。以后，每次调用遍历器对象的next方法，就会返回一个有着value和done两个属性的对象。value属性表示当前的内部状态的值，是yield表达式后面那个表达式的值；done属性是一个布尔值，表示是否遍历结束。
+```
+
+- `function`关键字与函数名之间有一个星号
+- 函数体内部使用`yield`表达式，定义不同的内部状态
+- 调用 Generator 函数后，该函数并不执行，返回的也不是函数运行结果，而是一个指向内部状态的指针对象，也就是遍历器对象（Iterator Object）。
+- 必须调用遍历器对象的`next`方法，使得指针移向下一个状态
+- 第一次调用next时等同于启动执行 Generator 函数的内部代码
+- `yield*`表达式用来在一个 Generator 函数里面执行另一个 Generator 函数。
+
+**Generator协程的理解**
+
+一个线程（或函数）执行到一半，可以暂停执行，将执行权交给另一个线程（或函数），等到稍后收回执行权的时候，再恢复执行。这种可以并行执行、交换执行权的线程（或函数），就称为协程。
+
+通过yield表达式交换控制权，next方法返回控制权
+
+
+
+### [asycn函数](https://es6.ruanyifeng.com/#docs/async)
+
+```js
+const gen = function* () {
+  const f1 = yield readFile('/etc/fstab');
+  const f2 = yield readFile('/etc/shells');
+  console.log(f1.toString());
+  console.log(f2.toString());
+};
+// 等同于
+const asyncReadFile = async function () {
+  const f1 = await readFile('/etc/fstab');
+  const f2 = await readFile('/etc/shells');
+  console.log(f1.toString());
+  console.log(f2.toString());
+};
+```
+
+-  Generator 函数的语法糖 ，星号（*）就是async关键字  yield就是await
+-  自带自动执行器（co模块）不需要分段执行next，全自动，而Generator需要手动next一下
+-  async函数在await之前的代码都是同步执行的，可以理解为await之前的代码属于new Promise时传入的代码（即同步代码），await表达式下面的所有代码都是在Promise.then中的回调（异步代码）
+-  await 命令后面，可以是 Promise 对象和原始类型的值（数值、字符串和布尔值，但这时会自动转成立即 resolved 的 Promise 对象）。
+-  async 函数的返回值是 Promise 对象
+
+**例题**
+
+```js
+console.log('script start')
+
+async function async1() {
+    await async2()
+    console.log('async1 end')
+}
+async function async2() {
+	console.log('async2 end')
+}
+async1()
+
+setTimeout(function() {
+	console.log('setTimeout')
+}, 0)
+
+new Promise(resolve => {
+    console.log('Promise')
+    resolve()
+}).then(function() {
+	console.log('promise1')
+}).then(function() {
+	console.log('promise2')
+})
+
+console.log('script end')
+
+// script start => async2 end => Promise => script end => async1 end => promise1 => promise2 => setTimeout
+```
+
+  	如果await 后面直接跟的为一个变量，比如：await 1；这种情况的话相当于直接把await后面的代码注册为一个微任务，可以简单理解为promise.then(await下面的代码)。然后跳出async1函数，执行其他代码，当遇到promise函数的时候，会注册promise.then()函数到微任务队列，注意此时微任务队列里面已经存在await后面的微任务。所以这种情况会先执行await后面的代码（async1 end），再执行async1函数后面注册的微任务代码(promise1,promise2)。
+
+
+
+### Class语法
+
+**静态方法**
+
+类相当于实例的原型，所有在类中定义的方法，都会被实例继承。如果在一个方法前，加上`static`关键字，就表示该方法不会被实例继承，而是直接通过类来调用，这就称为“静态方法”。
+
+```js
+class Foo {
+  static classMethod() {
+    return 'hello';
+  }
+}
+
+Foo.classMethod() // 'hello'
+
+var foo = new Foo();
+foo.classMethod()
+// TypeError: foo.classMethod is not a function
+```
+
+但是可以被子类继承调用
+
+```js
+class Foo {
+  static classMethod() {
+    return 'hello';
+  }
+}
+
+class Bar extends Foo {
+}
+
+Bar.classMethod() // 'hello'
+```
+
+
+
+### Class的继承
+
+```js
+class Point {
+  constructor(x, y) {
+    this.x = x;
+    this.y = y;
+  }
+}
+
+class ColorPoint extends Point {
+  constructor(x, y, color) {
+    this.color = color; // ReferenceError
+    super(x, y);
+    this.color = color; // 正确
+  }
+}
+// ES6 的继承机制完全不同，实质是先将父类实例对象的属性和方法，加到`this`上面（所以必须先调用`super`方法），然后再用子类的构造函数修改`this`。
+```
+
+子类必须在`constructor`方法中调用`super`方法，否则新建实例时会报错。这是因为子类自己的`this`对象，必须先通过父类的构造函数完成塑造，得到与父类同样的实例属性和方法，然后再对其进行加工，加上子类自己的实例属性和方法。如果不调用`super`方法，子类就得不到`this`对象。
+
+**重点： ES5 的继承，实质是先创造子类的实例对象`this`，然后再将父类的方法添加到`this`上面（`Parent.apply(this)`）。ES6 的继承机制完全不同，实质是先将父类实例对象的属性和方法，加到`this`上面（所以必须先调用`super`方法），然后再用子类的构造函数修改`this`。**
+
+
+
+**super关键字**
+
+- 第一种情况，`super`作为函数调用时，代表父类的构造函数。ES6 要求，子类的构造函数必须执行一次`super`函数。
+- 第二种情况，`super`作为对象时，在普通方法中，指向父类的原型对象(A.prototype)；在静态方法中，指向父类。
+- super指向当前对象的原型，this指向的是当前对象
+
+
+
+### import()的使用
+
+`import()`返回一个 Promise 对象，下面是`import()`的一些适用场合。
+
+- 按需加载
+
+```javascript
+button.addEventListener('click', event => {
+  import('./dialogBox.js')
+  .then(dialogBox => {
+    dialogBox.open();
+  })
+  .catch(error => {
+    /* Error handling */
+  })
+});
+```
+
+上面代码中，`import()`方法放在`click`事件的监听函数之中，只有用户点击了按钮，才会加载这个模块。
+
+- 条件加载
+
+```javascript
+if (condition) {
+  import('moduleA').then(...);
+} else {
+  import('moduleB').then(...);
+}
+```
+
+- 动态的模块路径
+
+```javascript
+import(f()).then(...);
+// 上面代码中，根据函数f的返回结果，加载不同的模块。
+```
+
+
+
+### 防抖（debounce）
+
+> 防抖是虽然事件持续触发，但只有等事件停止触发后 n 秒才执行函数
+
+防抖的原理就是：你尽管触发事件，但是我一定在事件触发 n 秒后才执行，如果你在一个事件触发的 n 秒内又触发了这个事件，那我就以新的事件的时间为准，n 秒后才执行，总之，就是要等你触发完事件 n 秒内不再触发事件
+
+**白话总结：持续抖动桌子（一直会清除定时器），只有停了才触发事件（防抖就是防止持续抖动）**
+
+```js
+// 第三版
+function debounce(func, wait) {
+    var timeout;  // 通过闭包实现 每次执行函数清除老的那个定时器
+
+    return function () {
+        // 如果使用我们的 debounce 函数，this 就会指向 Window 对象
+        var context = this;
+        // 传入event 对象
+        var args = arguments;
+
+        clearTimeout(timeout)
+        timeout = setTimeout(function(){
+            func.apply(context, args)
+        }, wait);
+    }
+}
+
+function getUserAction() {
+    container.innerHTML = count++;
+};
+
+container.onmousemove = debounce(getUserAction, 1000);
+```
+
+使用场景
+
+- 调整浏览器窗口大小时，resize 次数过于频繁，造成计算过多，此时需要最后一次的值，就用到了防抖
+- 滚动操作时,每次滚动都会触发事件,但是我们需要获取最后停留的位置,就用到了防抖
+
+
+
+### 节流（throttle）
+
+> 节流是持续触发的时候，每 n 秒执行一次函数
+
+**白话总结：水库的水一直流向阀门（必须持续触发事件），但泄洪阀每隔一段时间才打开，则为节流**
+
+关于节流的实现，有两种主流的实现方式，一种是使用时间戳，一种是设置定时器。
+
+- 使用时间戳：当触发事件的时候，我们取出当前的时间戳，然后减去之前的时间戳(最一开始值设为 0 )，如果大于设置的时间周期，就执行函数，然后更新时间戳为当前的时间戳，如果小于，就不执行。
+
+- 使用定时器：当触发事件的时候，我们设置一个定时器，再触发事件的时候，如果定时器存在，就不执行，直到定时器执行，然后执行函数，清空定时器，这样就可以设置下个定时器。
+
+    
+
+使用场景
+
+- 相机扫码
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
