--- a/learn/知识归纳.md
+++ b/learn/知识归纳.md
@@ -46,7 +46,7 @@ bar();
 
 ### 闭包
 
-[参考链接](参考链接 http://www.ruanyifeng.com/blog/2009/08/learning_javascript_closures.html)
+[参考链接](http://www.ruanyifeng.com/blog/2009/08/learning_javascript_closures.html)
 
 - 在函数内部定义**一个新的函数**来获取该**父函数**的变量（即：在外部调用父函数，父函数中的闭包函数返回其父函数的内部值，达到外部得到函数内的局部变量的目的）
 - 这些变量的值始终保持在内存中。（需要手动清理，因为闭包的变量不会被垃圾回收机制释放）
