--- a/learn/原生微信小程序笔记.md
+++ b/learn/原生微信小程序笔记.md
@@ -28,7 +28,22 @@ transformExpandList方法不生效
 
 - 使用WXS  在wxml下方使用一下模板语法， 不能使用es6
 
-```js
+```html
+<view class="fold-card-item-body">
+    <view class="fold-sub-item" wx:for="{{ utils.transformExpandList(item.expand, item.task_setting) }}" wx:key="index">
+        <view class="fold-card-item-header">
+            <view class="header-left">
+                <image class="header-left-img" src="{{ item.prize_cover }}" />
+            </view>
+            <view style="flex: 1">
+                <view class="header-center">
+                    <view>{{ item.prize_name }}</view>
+                </view>
+            </view>
+        </view>
+    </view>
+</view>
+
 <wxs module="utils">
   //  不展开默认显示两条礼物
   var transformExpandList = function (expand, array) {
