--- a/learn/原生微信小程序笔记.md
+++ b/learn/原生微信小程序笔记.md
@@ -26,7 +26,7 @@ transformExpandList方法不生效
 
 **解决方法** 
 
-- 使用WXS  在wxml下方使用一下模板语法， 不能使用es6
+- 方法1：使用WXS  在wxml下方使用一下模板语法， 不能使用es6
 
 ```html
 <view class="fold-card-item-body">
@@ -56,7 +56,7 @@ transformExpandList方法不生效
 </wxs>
 ```
 
-- 集成miniprogram-computed （该模块包含了类似vue的computed和watch）
+- 方法2：集成miniprogram-computed （该模块包含了类似vue的computed和watch）
 
 ```js
 // 官方文档  https://github.com/wechat-miniprogram/computed
